# babybuddy-books

./: .gitignore  README.md  pyproject.toml
babybuddy_books/: admin.py  api.py  apps.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
babybuddy_books/migrations/: 0001_initial.py  0002_bookreading_start_end_duration.py
babybuddy_books/static/books/js/: books.js
babybuddy_books/templates/books/: book_confirm_delete.html  book_form.html  book_list.html  books_inline.js.html  reading_confirm_delete.html  reading_form.html  reading_list.html
babybuddy_books/templates/books/cards/: summary.html
babybuddy_books/templatetags/: book_tags.py
